# sandbox-testcontainers-python-moto

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
src/: mymodel.py
tests/: test_mymodel.py
