[project]
name = "sandbox-testcontainers-python-moto"
version = "0.1.0"
description = "sandbox-testcontainers-python-moto"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "testcontainers>=4.8.2",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "PT"]

[tool.pytest.ini_options]
pythonpath = "src"
